<resources>
    <string name="app_name">NYT Best Sellers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_sellers">New York Times Best Sellers</string>
    <string name="book_cover_image">Book Cover Image</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="description">Description</string>
    <string name="lastWeekRank">Last Week:</string>
    <string name="thisWeekRank">"This Week: "</string>
    <string name="weeks_on_list">Weeks on List</string>
    <string name="none">" "</string>
    <string name="list_name">List Name</string>
    <string name="contributor">Contributor</string>
    <string name="synopsis">Synopsis</string>
    <string name="overview">Overview</string>
</resources>