<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bestSellersViewHolder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/booksCardView"
        android:theme="@style/Theme.BooksCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardElevation="5dp"
        android:foregroundGravity="center"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/bookImageView"
                android:layout_width="270dp"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/book_cover_image"
                android:layout_gravity="center"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/title"
                android:theme="@style/Theme.BookTitle"
                android:textColor="#2B90D9"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contributorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/contributor"
                style="@style/Theme.BookContributor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/description"
                    android:textSize="16sp" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/lastWeekRankTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lastWeekRank"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/weeksOnList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/weeks_on_list"
                    android:textSize="16sp" />


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/rankTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text=""
            android:textSize="34sp"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>